--- a/requirements.txt
+++ b/requirements.txt
@@ -1,88 +1,4 @@
-argon2-cffi==20.1.0
-asgiref==3.4.1
-async-generator==1.10
-attrs==21.2.0
-backcall==0.2.0
-bleach==4.0.0
-certifi==2021.5.30
-cffi==1.14.6
-charset-normalizer==2.0.4
-colorama==0.4.4
-debugpy==1.4.1
-decorator==5.0.9
-defusedxml==0.7.1
+django_environ==0.4.5
 Django==3.2.6
-django-cors-headers==3.7.0
-django-crispy-forms==1.12.0
-django-environ==0.4.5
-django-filter==2.4.0
-django-phonenumber-field==5.2.0
-django-six==1.0.4
-django-summernote==0.8.11.6
-djangorestframework==3.12.4
-docopt==0.6.2
-entrypoints==0.3
-idna==3.2
-ipykernel==6.0.3
-ipython==7.26.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-jedi==0.18.0
-Jinja2==3.0.1
-joblib==1.0.1
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.12
-jupyter-console==6.4.0
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-Markdown==3.3.4
-MarkupSafe==2.0.1
-matplotlib-inline==0.1.2
-mistune==0.8.4
-nbclient==0.5.3
-nbconvert==6.1.0
-nbformat==5.1.3
-nest-asyncio==1.5.1
-notebook==6.4.2
-numpy==1.21.1
-opencv-python==4.5.3.56
-packaging==21.0
-pandocfilters==1.4.3
-parso==0.8.2
-pickleshare==0.7.5
-Pillow==8.3.1
-pipreqs==0.4.10
-prometheus-client==0.11.0
-prompt-toolkit==3.0.19
-psycopg2==2.9.1
-pycparser==2.20
-Pygments==2.9.0
-pyparsing==2.4.7
-pyrsistent==0.18.0
-python-dateutil==2.8.2
-pytz==2021.1
-pywin32==301
-pywinpty==1.1.3
-pyzmq==22.2.1
-qtconsole==5.1.1
-QtPy==1.9.0
-requests==2.26.0
-scikit-learn==0.24.2
-scipy==1.7.1
-Send2Trash==1.8.0
-six==1.16.0
-sklearn==0.0
-sqlparse==0.4.1
-terminado==0.10.1
-testpath==0.5.0
-threadpoolctl==2.2.0
-tornado==6.1
-traitlets==5.0.5
-urllib3==1.26.6
-wcwidth==0.2.5
-webencodings==0.5.1
+environ==1.0
 whitenoise==5.3.0
-widgetsnbextension==3.5.1
-yarg==0.1.9
